Hotfix e atualização de documentação
RelatorioService: Refatoração para conformidade com as regras do SonarQube.

README.md: Pequenos ajustes e atualizações de informações.